@@ -1,6 +1,7 @@
 2010-07-21
 
 	* src/prefs_template.c: confirm on cancel if templates are modified.
+	  Added Up/Down button to reorder template list.
 
 2010-07-20
 
